// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`FormTitle\` component should render correctly with \`className\` prop 1`] = `
<p
  className="form__title __CLASSNAME__"
>
  __CONTENT__
</p>
`;

exports[`\`FormTitle\` component should render correctly with default props 1`] = `
<p
  className="form__title"
>
  __CONTENT__
</p>
`;
